Improve styles for notifiction

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,18 @@
       body {
         font-family: 'Roboto', sans-serif;
       }
+
+      .uk-notification-message {
+        position: relative;
+        margin-bottom: 10px;
+        padding: 15px;
+        background: #ffffff;
+        border: 1px solid;
+        border-radius: 2px;
+        font-size: 1.25rem;
+        line-height: 1.4;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
