Add follow/unfollow button

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,14 @@
         line-height: 1.4;
         cursor: pointer;
       }
+
+      .uk-button-primary, .uk-button-primary:focus {
+        background-color: #3F72AF;
+      }
+
+      .uk-button-primary:hover {
+        background-color: #112D4E;
+      }
     </style>
   </head>
   <body>
