--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <style>
       body {
         font-family: 'Roboto', sans-serif;
+        -webkit-font-smoothing: antialiased;
       }
 
       .uk-notification-message {
