Makes article editor responsive

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,14 @@
         background-color: #112D4E;
       }
     </style>
+    <!-- To hide history buttons (undo and redo) on smaller screens -->
+    <style>
+      @media screen and (max-width: 610px) {
+        .rdw-history-wrapper {
+          display: none !important;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>
